--- a/index.html
+++ b/index.html
@@ -246,19 +246,19 @@
         <img src="img/licensed-image (1).jpeg" alt="" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)">
         <h2 class="fw-normal">Indonesia</h2>
         <p>ndonesia is a diverse archipelago with over 17,000 islands, offering stunning natural beauty, rich cultural traditions, and a blend of old and new that make it a compelling destination for travelers.</p>
-        <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+        <p><a class="btn btn-secondary" href="https://www.traveloka.com/id-id?id=12821356162208263740&adloc=id-id&kw=12821356162208263740_traveloka&gmt=e&gn=g&gd=c&gdm=&gcid=682930930290&gdp=&gdt=&gap=&pc=1&cp=12821356162208263740_ID_TV_SM_AU_DE_Google_RSA_ID_BRA_Traveloka_12821356162208263740_&aid=153411186215&wid=kwd-51659214310&fid=&gid=9126868&kid=_k_Cj0KCQiA2eKtBhDcARIsAEGTG40O--M14zNnSL69RbuQSuznBh53DaqIGfhF7P2it48sB-9GhnE0s8oaAp7FEALw_wcB_k_&utm_id=EFKgiZPd&ad_id=682930930290&target_id=kwd-51659214310&click_id=Cj0KCQiA2eKtBhDcARIsAEGTG40O--M14zNnSL69RbuQSuznBh53DaqIGfhF7P2it48sB-9GhnE0s8oaAp7FEALw_wcB&group_id={adgroupid)&gclid=Cj0KCQiA2eKtBhDcARIsAEGTG40O--M14zNnSL69RbuQSuznBh53DaqIGfhF7P2it48sB-9GhnE0s8oaAp7FEALw_wcB">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <img src="img/pascal-habermann-35818.jpg" alt="" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)">
         <h2 class="fw-normal">Croatia</h2>
         <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
-        <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+        <p><a class="btn btn-secondary" href="https://www.traveloka.com/id-id?id=12821356162208263740&adloc=id-id&kw=12821356162208263740_traveloka&gmt=e&gn=g&gd=c&gdm=&gcid=682930930290&gdp=&gdt=&gap=&pc=1&cp=12821356162208263740_ID_TV_SM_AU_DE_Google_RSA_ID_BRA_Traveloka_12821356162208263740_&aid=153411186215&wid=kwd-51659214310&fid=&gid=9126868&kid=_k_Cj0KCQiA2eKtBhDcARIsAEGTG40O--M14zNnSL69RbuQSuznBh53DaqIGfhF7P2it48sB-9GhnE0s8oaAp7FEALw_wcB_k_&utm_id=EFKgiZPd&ad_id=682930930290&target_id=kwd-51659214310&click_id=Cj0KCQiA2eKtBhDcARIsAEGTG40O--M14zNnSL69RbuQSuznBh53DaqIGfhF7P2it48sB-9GhnE0s8oaAp7FEALw_wcB&group_id={adgroupid)&gclid=Cj0KCQiA2eKtBhDcARIsAEGTG40O--M14zNnSL69RbuQSuznBh53DaqIGfhF7P2it48sB-9GhnE0s8oaAp7FEALw_wcB">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <img src="img/licensed-image.jpeg" alt="" class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="var(--bs-secondary-color)">
         <h2 class="fw-normal">kamboja</h2>
         <p>Cambodia, located in Southeast Asia, is known for its ancient wonders and natural beauty. With the iconic Angkor Wat, lush landscapes such as Tonle Sap Lake, and a rich culture, Cambodia offers a captivating blend of history and natural splendor for visitors to explore.</p>
-        <p><a class="btn btn-secondary" href="#">View details &raquo;</a></p>
+        <p><a class="btn btn-secondary" href="https://www.traveloka.com/id-id?id=12821356162208263740&adloc=id-id&kw=12821356162208263740_traveloka&gmt=e&gn=g&gd=c&gdm=&gcid=682930930290&gdp=&gdt=&gap=&pc=1&cp=12821356162208263740_ID_TV_SM_AU_DE_Google_RSA_ID_BRA_Traveloka_12821356162208263740_&aid=153411186215&wid=kwd-51659214310&fid=&gid=9126868&kid=_k_Cj0KCQiA2eKtBhDcARIsAEGTG40O--M14zNnSL69RbuQSuznBh53DaqIGfhF7P2it48sB-9GhnE0s8oaAp7FEALw_wcB_k_&utm_id=EFKgiZPd&ad_id=682930930290&target_id=kwd-51659214310&click_id=Cj0KCQiA2eKtBhDcARIsAEGTG40O--M14zNnSL69RbuQSuznBh53DaqIGfhF7P2it48sB-9GhnE0s8oaAp7FEALw_wcB&group_id={adgroupid)&gclid=Cj0KCQiA2eKtBhDcARIsAEGTG40O--M14zNnSL69RbuQSuznBh53DaqIGfhF7P2it48sB-9GhnE0s8oaAp7FEALw_wcB">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
 
